@@ -1,3 +1,11 @@
+Mon Aug 20 23:48:18 2001  Jonathan Blandford  <jrb@webwynk.net>
+
+	* gtk/gtktreeview.c (gtk_tree_view_get_cell_area): Fix bug
+	reported by Kristian Rietveld <kristian@planet.nl> to handle row
+	== NULL.
+	(gtk_tree_view_destroy): Fix bug reported by Kristian Rietveld
+	<kristian@planet.nl> to change destroy order.
+
 Mon Aug 20 11:39:44 2001  Jonathan Blandford  <jrb@redhat.com>
 
 	* gtk/gtktreeselection.c (gtk_tree_selection_class_init): Use
