@@ -1858,9 +1858,8 @@ gtk_tree_view_column_get_reorderable (GtkTreeViewColumn *tree_column)
  * @tree_column: a #GtkTreeViewColumn
  * @sort_column_id: The sort_column_id of the model to sort on.
  * 
- * Sets the logical sort_column_id that this column sorts on when this
- * column is selected for sorting.  Doing so makes
- * the column header clickable.
+ * Sets the logical sort_column_id that this column sorts on when this column is
+ * selected for sorting.  Doing so makes the column header clickable.
  **/
 void
 gtk_tree_view_column_set_sort_column_id (GtkTreeViewColumn *tree_column,
